test bg overwrite

--- a/css/mopimopi.css
+++ b/css/mopimopi.css
@@ -103,6 +103,10 @@ ul li:not(:last-child) {
     background-repeat: no-repeat
 }
 
+#wrap > nav:nth-child(4) {
+    background: green !important;
+}
+
 nav {
     position: relative;
     height: 4.2rem;
@@ -209,6 +213,8 @@ nav table {
 #update .n {
     color: #FB0
 }
+
+
 
 #update .c {
     color: #00E5FF
