--- a/css/mopimopi.css
+++ b/css/mopimopi.css
@@ -104,13 +104,12 @@ ul li:not(:last-child) {
 }
 
 #wrap > nav:nth-child(4) {
-    background: green !important;
+    background: transparent !important;
 }
 
 nav {
     position: relative;
     height: 4.2rem;
-
     padding: .1rem;
     background-color: transparent;
     z-index: 998
